--- a/application.properties
+++ b/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/db1
-spring.datasource.username = root
-spring.datasource.password = Susmi@123
+#spring.datasource.url = jdbc:mysql://localhost:3306/db1
+#spring.datasource.username = root
+#spring.datasource.password = Susmi@123
 
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
