--- a/application.properties
+++ b/application.properties
@@ -9,3 +9,4 @@
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto = update
+eureka.client.serviceurl.defaultZone=http://localhost:8770/eureka/
